--- a/src/client/order/OrderPrice.css
+++ b/src/client/order/OrderPrice.css
@@ -1,7 +1,7 @@
 .OrderPrice {
     margin-top: auto;
     border-bottom: 1px solid black;
-    /* box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0px 0px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .OrderPrice .hints {
@@ -11,10 +11,6 @@
 
 .OrderPrice .total-price {
     margin-right: 8px;
-}
-
-.OrderPrice .total-price input {
-    font-size: 20px;
 }
 
 .OrderPrice .price-range,
